force-app/main/default/objects/PWChrono_Leave_Encashment__c/PWChrono_Leave_Encashment__c.object-meta.xml
<CustomObject>
    <label>PWChrono Leave Encashment</label>
    <nameField>
        <displayFormat>LE-{0000}</displayFormat>
        <label>Encashment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PWChrono Leave Encashments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>