force-app/main/default/objects/PWChrono_Leave_Encashment__c/fields/Employees__c.field-meta.xml
<CustomField>
    <fullName>Employees__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employees</label>
    <referenceTo>Portal_Users__c</referenceTo>
    <relationshipLabel>Leave Encashment Employees</relationshipLabel>
    <relationshipName>Leave_Encashment_Employees</relationshipName>
    <type>Lookup</type>
</CustomField>