force-app/main/default/objects/PWChrono_Leave_Encashment__c/fields/Encashment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Encashment_Amount__c</fullName>
    <formula>Leave_Days__c * Per_Day_Rate__c</formula>
    <label>Encashment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>