force-app/main/default/objects/PWChrono_Leave_Encashment__c/fields/Encashment_Date__c.field-meta.xml
<CustomField>
    <fullName>Encashment_Date__c</fullName>
    <label>Encashment Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>