force-app/main/default/objects/PWChrono_Leave_Encashment__c/fields/Leave_Days__c.field-meta.xml
<CustomField>
    <fullName>Leave_Days__c</fullName>
    <label>Leave Days</label>
    <precision>5</precision>
    <required>true</required>
    <scale>1</scale>
    <type>Number</type>
</CustomField>