force-app/main/default/objects/PWChrono_Leave_Encashment__c/fields/Leave_Period__c.field-meta.xml
<CustomField>
    <fullName>Leave_Period__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Leave Period</label>
    <referenceTo>PWChrono_Leave_Period__c</referenceTo>
    <relationshipLabel>Leave Encashments</relationshipLabel>
    <relationshipName>PWChrono_Leave_Encashments</relationshipName>
    <type>Lookup</type>
</CustomField>