force-app/main/default/objects/PWChrono_Leave_Encashment__c/fields/Payroll_Date__c.field-meta.xml
<CustomField>
    <fullName>Payroll_Date__c</fullName>
    <description>When to include in salary payment</description>
    <label>Payroll Date</label>
    <type>Date</type>
</CustomField>