force-app/main/default/objects/PWChrono_Leave_Encashment__c/fields/Per_Day_Rate__c.field-meta.xml
<CustomField>
    <fullName>Per_Day_Rate__c</fullName>
    <label>Per Day Rate</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>