force-app/main/default/objects/PWChrono_Leave_Encashment__c/fields/Portal_Users__c.field-meta.xml
<CustomField>
    <fullName>Portal_Users__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Portal Users</label>
    <referenceTo>Portal_Users__c</referenceTo>
    <relationshipLabel>Leave Encashment Portal Users</relationshipLabel>
    <relationshipName>Leave_Encashment_Portal_Users_New</relationshipName>
    <type>Lookup</type>
</CustomField>